OLMIS-1998: Fixed issues in the Manage POD screen
* Added indication are products full supply or non-full supply
* Updated "received in" to "received date"
* Fixed calendar date picker missing glyphicon arrows

--- a/src/main/webapp/proof-of-delivery-view/footer.html
+++ b/src/main/webapp/proof-of-delivery-view/footer.html
@@ -21,7 +21,7 @@
             </dd>
         </div>
         <div>
-            <dt>{{'label.receivedIn' | message}}</dt>
+            <dt>{{'label.receivedDate' | message}}</dt>
             <dd>
                 <div ng-if="!vm.isSubmitted()">
                     <openlmis-datepicker input-id="receivedDate" value="vm.pod.receivedDate"
