--- a/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
+++ b/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
@@ -4,6 +4,7 @@
         <table >
             <thead>
                 <tr>
+                    <th>{{'label.fullSupply' | message}}</th>
                     <th>{{'label.productName' | message}}</th>
                     <th>{{'label.productUnit' | message}}</th>
                     <th>{{'label.packsToShip' | message}}</th>
@@ -18,6 +19,9 @@
                     ng-repeat="(category, lineItems) in vm.pageItems | groupBy:'$program.orderableCategoryDisplayName'">
                 <tr ng-class="{'invalid-row': !vm.pod.isLineItemValid(lineItem)}"
                     ng-repeat="lineItem in lineItems | orderBy : 'orderLineItem.orderable.name'">
+                    <td>
+                        <i ng-class="{'icon-ok': lineItem.$program.fullSupply}"></i>
+                    </td>
                     <td>{{lineItem.orderLineItem.orderable.name}}</td>
                     <td>{{lineItem.orderLineItem.orderable.dispensable.dispensingUnit}}</td>
                     <td>{{lineItem.orderLineItem.packsToShip}}</td>
