--- a/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
+++ b/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
@@ -1,6 +1,6 @@
 <div class="page">
     <ng-include src="'proof-of-delivery-view/header.html'"></ng-include>
-    <div class="product-grid openlmis-table-container">
+    <div class="openlmis-table-container">
         <table >
             <thead>
                 <tr>
