OLMIS-1999: fixed class name on view POD screen

--- a/src/main/webapp/proof-of-delivery-view/header.html
+++ b/src/main/webapp/proof-of-delivery-view/header.html
@@ -4,7 +4,7 @@
         <span>{{vm.typeMessage() | message}}</span>
     </div>
 
-    <div class="requisition-details">
+    <div class="pod-details">
         <div>
             <strong>{{'label.orderNumber' | message}}</strong>
             <div>{{vm.pod.order.orderCode}}</div>
