OLMIS-1990: Added openlmisDate filter to define date format in config file

--- a/src/order-view/order-view.html
+++ b/src/order-view/order-view.html
@@ -40,8 +40,8 @@
                     <td>{{order.facility.geographicZone.name}}</td>
                     <td>{{order.program.name}}</td>
                     <td>{{order.processingPeriod.name}}</td>
-                    <td>{{order.processingPeriod.startDate | date:'dd/MM/yyyy'}}</td>
-                    <td>{{order.processingPeriod.endDate | date:'dd/MM/yyyy'}}</td>
+                    <td>{{order.processingPeriod.startDate | openlmisDate}}</td>
+                    <td>{{order.processingPeriod.endDate | openlmisDate}}</td>
                     <td>{{order.status}}</td>
                     <td class="col-emergency">
                         <i ng-class="{'icon-ok': order.emergency}"></i>
