--- a/src/proof-of-delivery-view/footer.html
+++ b/src/proof-of-delivery-view/footer.html
@@ -24,7 +24,7 @@
                 </openlmis-datepicker>
                 <div ng-if="vm.pod.$errors.receivedDate" class="cell-error-message">{{vm.pod.$errors.receivedDate}}</div>
             </div>
-            <div ng-if="vm.isSubmitted()">{{vm.pod.receivedDate | date: 'dd/MM/yyyy'}}</div>
+            <div ng-if="vm.isSubmitted()">{{vm.pod.receivedDate | openlmisDate}}</div>
         </dd>
     </dl>
 </aside>
