--- a/src/openlmis-form/datepicker.html
+++ b/src/openlmis-form/datepicker.html
@@ -1,7 +1,6 @@
 <div class="olmis-datepicker">
     <i class="olmis-datepicker-icon"></i>
     <input type="text" class="form-control" ng-model="value" id="{{inputId}}"
-        data-container="body" data-autoclose="1" data-date-format="dd/MM/yyyy"
-        data-min-date="{{minDate}}" data-max-date="{{maxDate}}" bs-datepicker
-        ng-change="changeMethod()"/>
+        data-container="body" data-autoclose="1" data-min-date="{{minDate}}"
+        data-max-date="{{maxDate}}" bs-datepicker ng-change="changeMethod()"/>
 </div>
