OLMIS-1990: Changed default date format and datepicker directive

--- a/src/openlmis-form/datepicker.html
+++ b/src/openlmis-form/datepicker.html
@@ -1,6 +1,7 @@
 <div class="olmis-datepicker">
     <i class="olmis-datepicker-icon"></i>
     <input type="text" class="form-control" ng-model="value" id="{{inputId}}"
-        data-container="body" data-autoclose="1" data-min-date="{{minDate}}"
-        data-max-date="{{maxDate}}" bs-datepicker ng-change="changeMethod()"/>
+        data-container="body" data-autoclose="1" data-date-format="{{dateFormat}}"
+        data-min-date="{{minDate}}" data-max-date="{{maxDate}}" bs-datepicker
+        ng-change="changeMethod()"/>
 </div>
