--- a/src/proof-of-delivery-view/footer.html
+++ b/src/proof-of-delivery-view/footer.html
@@ -20,7 +20,7 @@
         <dd>
             <div ng-if="!vm.isSubmitted()">
                 <openlmis-datepicker input-id="receivedDate" value="vm.pod.receivedDate"
-                    change-method="vm.pod.validateRequiredField('receivedDate')">
+                    change-method="vm.pod.validateRequiredField('receivedDate')" date-format="vm.dateFormat">
                 </openlmis-datepicker>
                 <div ng-if="vm.pod.$errors.receivedDate" class="cell-error-message">{{vm.pod.$errors.receivedDate}}</div>
             </div>
