OLMIS-2056: Initial value of the select will now be visible on the admin template screen

--- a/src/admin-template/template.html
+++ b/src/admin-template/template.html
@@ -58,7 +58,7 @@
                                     <input positive-integer type="text" id="numberOfPeriods" ng-model="vm.template.numberOfPeriodsToAverage" class="form-control input-sm"/>
                                 </div>
                                 <div ng-if="column.columnDefinition.options.length > 0">
-                                    <select ng-model="column.option" ng-options="option as option.optionLabel for option in column.columnDefinition.options"></select>
+                                    <select ng-model="column.option" ng-options="option as option.optionLabel for option in column.columnDefinition.options" required></select>
                                 </div>
                                 <div ng-if="!column.$isValid(vm.template)" class="error">{{vm.errorMessage(column)}}</div>
                             </td>
