OLMIS-2036: UI Pagination to Manage POD screen
* cleaneup in controller and tests

--- a/src/order-view/order-view.html
+++ b/src/order-view/order-view.html
@@ -8,7 +8,7 @@
                     ng-options="facility.name for facility in vm.supplyingFacilities"
                     required></select>
             <label for="requestingFacility">{{'label.requestingFacility' | message}}</label>
-            <select id="requestestingFacility"
+            <select id="requestingFacility"
                     ng-model="vm.requestingFacility"
                     ng-options="facility.name for facility in vm.requestingFacilities"></select>
             <label>{{'label.program' | message}}</label>
