--- a/src/proof-of-delivery-view/header.html
+++ b/src/proof-of-delivery-view/header.html
@@ -15,7 +15,7 @@
         </li>
         <li>
             <strong>{{'label.orderDate' | message}}</strong>
-            {{vm.pod.order.createdDate | openlmisDate: 'dd/MM/yyyy HH:mm:ss'}}
+            {{vm.pod.order.createdDate | openlmisDatetime}}
         </li>
         <li>
             <strong>{{'label.reportingPeriod' | message}}</strong>
