--- a/src/openlmis-form/openlmis-datepicker.html
+++ b/src/openlmis-form/openlmis-datepicker.html
@@ -1,7 +1,7 @@
 <div class="olmis-datepicker">
     <i class="olmis-datepicker-icon"></i>
     <input type="text" class="form-control" ng-model="value" id="{{inputId}}"
-        data-container="body" data-autoclose="1" data-date-format="{{dateFormat}}"
+        data-container="body" data-autoclose="1" data-date-format="{{vm.dateFormat}}"
         data-min-date="{{minDate}}" data-max-date="{{maxDate}}" bs-datepicker
         ng-change="changeMethod()"/>
 </div>
