OLMIS-2060: User profile information are displaying again

--- a/src/openlmis-user/profile.html
+++ b/src/openlmis-user/profile.html
@@ -2,14 +2,14 @@
     <h2>{{'label.basicInformation' | message}}</h2>
     <dl>
         <dt>{{'create.user.firstName' | message}}</dt>
-        <dd>{{userProfile.firstName}}<dd>
+        <dd>{{vm.user.firstName}}<dd>
     </dl>
     <dl>
         <dt>{{'create.user.lastName' | message}}</dt>
-        <dd>{{userProfile.lastName}}<dd>
+        <dd>{{vm.user.lastName}}<dd>
     </dl>
     <dl>
         <dt>{{'create.user.email' | message}}</dt>
-        <dd>{{userProfile.email}}<dd>
+        <dd>{{vm.user.email}}<dd>
     </dl>
 </div>
