--- a/src/openlmis-modal/alert.html
+++ b/src/openlmis-modal/alert.html
@@ -1,7 +1,7 @@
 <div class=alert-main>
     <span class="icon {{alertClass}}"></span>
     <div class="alert-messages {{alertClass}}">
-		<div>{{message | message}}</div>
-		<div class="alert-message-additional">{{additionalMessage | message}}</div>
+		<div>{{title | message}}</div>
+		<div class="alert-message-additional">{{message | message}}</div>
 	</div>
 </div>
