OLMIS-2051: Cleared alert markup

--- a/src/openlmis-modal/alert.html
+++ b/src/openlmis-modal/alert.html
@@ -1,7 +1,7 @@
 <div class=alert-main>
     <span class="icon {{alertClass}}"></span>
-    <div class="alert-messages {{alertClass}}">
-		<div>{{title | message}}</div>
-		<div class="alert-message-additional">{{message | message}}</div>
+    <div class="alert-message {{alertClass}}">
+		<h2>{{title | message}}</h2>
+		<p>{{message | message}}</p>
 	</div>
 </div>
